hotfix: more user messaging queries
(cherry picked from commit d565d2c065a6888dfaaeb06aa6cbe213abb604e2)